@@ -1,3 +1,5 @@
+  * Add gopher input plugin
+
 xine-lib (1.2.10) 2019-12-13
   * Add first Android support.
   * Add (xcb)xv yuy2 emulation.
